--- a/index.html
+++ b/index.html
@@ -15,6 +15,11 @@
 
   <!-- Ramen Menu -->
   <div id="ramen-menu">
+    <img src="./assets/ramen/shoyu.jpg">
+    <img src="./assets/ramen/naruto.jpg">
+    <img src="./assets/ramen/nirvana.jpg">
+    <img src="./assets/ramen/gyukotsu.jpg">
+    <img src="./assets/ramen/kojiro.jpg">
     <!-- Ramen Images Here -->
   </div>
 
